Fix for border causing horizontal scrolling

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -167,7 +167,7 @@
 	width: 100%;
 	height: 5em;
 	border-style: solid;
-	border-width: 0 0 50px 100vw;
+	border-width: 0 0 50px 95vw;
 }
 
 .triangle-gl-red {
